<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>2.7.1</version>
        <relativePath/>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>order-service</module>
        <module>common</module>
    </modules>


    <groupId>com.food.order</groupId>
    <artifactId>food-ordering-system</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <properties>
        <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
        <mockito.version>4.5.1</mockito.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>order-core-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>order-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>order-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>order-application</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>order-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>common-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.food.order</groupId>
                <artifactId>order-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.ferstl</groupId>
                <artifactId>depgraph-maven-plugin</artifactId>
                <version>4.0.1</version>
                <configuration>
                    <scope>compile</scope>
                    <graphFormat>puml</graphFormat>
                    <createImage>true</createImage>
                    <excludes>
                        <exclude>org.slf4j:slf4j-api</exclude>
                        <exclude>com.google.guava:guava</exclude>
                        <exclude>io.vavr:vavr</exclude>
                    </excludes>
                    <transitiveExcludes>
                        <transitiveExclude>*</transitiveExclude>
                    </transitiveExcludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>